<resources>
    <string name="app_name">Game of Dogs</string>
    <string name="welcome_message">Welcome!</string>
    <string name="identify_the_breed">Identify the breed</string>
    <string name="identify_the_dog">Identify the dog</string>
    <string name="search_dog_breeds">Search dog breed</string>
    <string name="difficulty_level">Change Difficulty </string>
    <string name="show_difficulty_description">You have chosen Beginner Level</string>
    <string name="level_one_description">Identify the Breed</string>
    <string name="select_breed">Select the dog breed shown in the image below.</string>
    <string name="submit">Submit</string>
    <string name="result"></string>

    <string name="identify_dogs_header">Identify Dogs Breed </string>
    <string name="identify_dogs_description">Click the image of the corresponding Breed</string>
    <string name="breed_name">Golden Retriever</string>
    <string name="dog_result"></string>
    <string name="search">Search a Breed</string>
    <string name="breeds">Breeds</string>
    <string name="text_submit">Submit</string>
    <string name="text_stop">Stop</string>
    <string name="countdown">10</string>
    <string-array name="dog_names_array" >
        <item>Bull Mastiff</item>
        <item>Doberman</item>
        <item>Eskimo</item>
        <item>German Shepard</item>
        <item>Golden Retriever</item>
        <item>Siberian Husky</item>
        <item>Komondor</item>
        <item>Labrador Retriever</item>
        <item>Bull Rottweiler</item>
        <item>Saint</item>
        <item>Saluki</item>
        <item>Boston Bull</item>
    </string-array>

</resources>
